# mf

./: .gitignore  .justfile  .pre-commit-config.yaml  JOURNAL.md  LEARNINGS.md  LICENSE-MIT  README.md  RELEASING.md  justfile  pyproject.toml  requirements.txt
.github/workflows/: badges.yml  ci.yml
demos/: demo_mf.session  record_demo_mf.sh  setup_demo_mf.sh
src/mf/: __init__.py  _app_cache.py  _app_config.py  _app_last.py  _app_mf.py  _config.py  _mf.py  cli_cache.py  cli_config.py  cli_last.py  cli_main.py  constants.py  mf.py  utils.py  version.py
src/mf/params/: __init__.py  _params.py
src/mf/utils/: __init__.py  _utils.py  cache.py  cache_utils.py  config.py  config_utils.py  console.py  default_config.py  editor_utils.py  file.py  file_utils.py  library.py  misc.py  normalizers.py  parsers.py  patterns.py  play.py  playlist.py  scan.py  scan_utils.py  search.py  settings.py  settings_registry.py  stats.py  validation.py
static/: coverage.json  python_versions.json
tests/: conftest.py  test_additional_coverage.py  test_allowed_values.py  test_app_mf_uncovered.py  test_cache.py  test_cache_commands.py  test_cache_utils_errors.py  test_cleanup_command.py  test_cli_app_mf.py  test_cli_cache_branches.py  test_cli_cache_clear_command.py  test_cli_cache_clear_happy.py  test_cli_cache_clear_success.py  test_cli_cache_file_command.py  test_cli_cache_rebuild.py  test_cli_cache_stats_command.py  test_cli_main_branches.py  test_cli_main_vlc_errors.py  test_cli_misc.py  test_config.py  test_config_actions.py  test_config_migration.py  test_config_settings_command.py  test_config_unknown_key.py  test_config_utils_errors.py  test_editor_and_permissions.py  test_editor_utils.py  test_editor_utils_fallbacks.py  test_extensions.py  test_fd_fallback.py  test_file_utils_fallback.py  test_find_media_files.py  test_format_and_cache_paths.py  test_get_fd_binary_platforms.py  test_get_file_by_index.py  test_imdb_empty.py  test_imdb_error_paths.py  test_imdb_parser.py  test_init_exposure.py  test_library_cache_and_queries.py  (+36 more)
