[project]
name = "mf"
dynamic = ["version"]
description = "Media file finder and player"
readme = "README.md"
authors = [
    { name = "ap", email = "arnepelzerprivat@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cinemagoer>=2023.5.1",
    "guessit>=3.8.0",
    "rich>=14.2.0",
    "typer>=0.19.2",
]

[project.scripts]
mf = "mf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mf/_version.py"