[project]
name = "mf"
dynamic = ["version"]
description = "Media file finder and player"
readme = "README.md"
authors = [
    { name = "ap", email = "arnepelzerprivat@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cinemagoer>=2023.5.1",
    "guessit>=3.8.0",
    "rich>=14.2.0",
    "tomlkit>=0.13.3",
    "typer>=0.19.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
mf = "mf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mf/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mf"]

[tool.hatch.build.targets.wheel.force-include]
"src/mf/bin/fd-v10_3_0-x86_64-unknown-linux-gnu" = "mf/bin/fd-v10_3_0-x86_64-unknown-linux-gnu"
"src/mf/bin/fd-v10_3_0-aarch64-apple-darwin" = "mf/bin/fd-v10_3_0-aarch64-apple-darwin"
"src/mf/bin/fd-v10_3_0-x86_64-apple-darwin" = "mf/bin/fd-v10_3_0-x86_64-apple-darwin"
"src/mf/bin/fd-v10_3_0-x86_64-pc-windows-msvc.exe" = "mf/bin/fd-v10_3_0-x86_64-pc-windows-msvc.exe"

[tool.pytest.ini_options]
addopts = "-q --cov=src/mf --cov-report=term-missing --cov-report=xml --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
console_output_style = "progress"

[tool.coverage.run]
branch = true
source = ["src/mf"]
omit = []
data_file = ".coverage"

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 0
exclude_lines = [
    "if __name__ == '__main__':",
    "pragma: no cover",
]

[tool.coverage.html]
directory = "htmlcov"

