[project]
name = "mf"
dynamic = ["version"]
description = "Media file finder and player"
readme = "README.md"
authors = [
    { name = "ap", email = "arnepelzerprivat@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "cinemagoer>=2023.5.1",
    "guessit>=3.8.0",
    "rich>=14.2.0",
    "tomlkit>=0.13.3",
    "typer>=0.19.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
]

[project.scripts]
mf = "mf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mf/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mf"]

[tool.hatch.build.targets.wheel.force-include]
"src/mf/bin/fd-v10_3_0-x86_64-unknown-linux-gnu" = "mf/bin/fd-v10_3_0-x86_64-unknown-linux-gnu"
"src/mf/bin/fd-v10_3_0-aarch64-apple-darwin" = "mf/bin/fd-v10_3_0-aarch64-apple-darwin"
"src/mf/bin/fd-v10_3_0-x86_64-apple-darwin" = "mf/bin/fd-v10_3_0-x86_64-apple-darwin"
"src/mf/bin/fd-v10_3_0-x86_64-pc-windows-msvc.exe" = "mf/bin/fd-v10_3_0-x86_64-pc-windows-msvc.exe"
"src/mf/bin/LICENSE-fd-APACHE" = "mf/bin/LICENSE-fd-APACHE"
"src/mf/bin/LICENSE-fd-MIT" = "mf/bin/LICENSE-fd-MIT"

[tool.pytest.ini_options]
addopts = "-q --cov=src/mf --cov-report=term-missing --cov-report=xml --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
console_output_style = "progress"

[tool.coverage.run]
branch = true
source = ["src/mf"]
omit = []
data_file = ".coverage"

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 0
exclude_lines = [
    "if __name__ == '__main__':",
    "pragma: no cover",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py310"
fix = false  # Fix safely fixable errors automatically
indent-width = 4
line-length = 88
respect-gitignore = true
src = ["src", "test"]
exclude = ["docs"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "D",  # pydocstyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM",  # flake8-simplify
    "I",  # isort
]

# For some of the following, see https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = [
    "D100",  # Missing docstring in public module
    "D205",  # Missing blank line between summary line and description
    "E111",  # Indentation is not a multiple of four
    "E114",  # Indentation is not a multiple of four (comment)
    "E117",  # Over-indented
    "D206",  # Docstring should be indented with spaces, not tabs
    "D300",  # Triple single quotes
    "B905",  # zip without explicit strict
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
indent-style = "space"
